# conic

./: .gitignore  CLAUDE.md  Cargo.toml
conic-cli/: Cargo.toml
conic-cli/src/: main.rs
conic-core/: Cargo.toml  config.toml
conic-core/benches/: clean_nan.rs  conic_bench.rs  filter_out_rows.rs
conic-core/src/: calc.rs  error.rs  io.rs  lib.rs
conic-core/src/calc/: clean.rs  compute.rs  mod.rs
conic-core/src/frame/: clean.rs  fix.rs  mod.rs  read.rs
conic-core/src/kernel/: config.rs  core.rs  error.rs  mod.rs
conic-core/src/math/: basic.rs
docs/clean/: remove-rows.md  replace-rows.md
docs/filter/: remove-rows.md  replace-rows.md
