[package]
name        = "conic-core"
version     = "0.1.0"
edition     = "2024"
license     = "MPL-2.0"
description = "Command-line interface for `conic`"

[dependencies]
polars      = { version = "0.52.0", features = ["is_in", "lazy", "timezones"] }
thiserror   = { version = "2.0.17" }

[dev-dependencies]
criterion   = { version = "0.8.0" }

[[bench]]
name        = "conic_bench"
harness     = false