[package]
name        = "conic-core"
version     = "0.1.0"
edition     = "2024"
license     = "MPL-2.0"
description = "Command-line interface for `conic`"

[dependencies]
polars      = { version = "0.52.0", features = ["abs", "diff", "is_in", "lazy", "rolling_window", "timezones"] }
thiserror   = { version = "2.0.17" }
serde       = { version = "1.0.228", features = ["derive"] }
toml        = { version = "0.9.8" }

[dev-dependencies]
criterion   = { version = "0.8.0" }

[[bench]]
name        = "conic_bench"
harness     = false