[package]
name        = "conic-core"
version     = "0.1.0"
edition     = "2024"
license     = "MPL-2.0"
description = "Command-line interface for `conic`"

[dependencies]
polars      = { version = "0.53.0", features = ["abs", "diff", "is_in", "lazy", "rolling_window"] }
thiserror   = { version = "2.0.18" }
serde       = { version = "1.0.228", features = ["derive"] }
toml        = { version = "0.9.12" }

[dev-dependencies]
criterion   = { version = "0.8.2" }

[[bench]]
name        = "conic_bench"
harness     = false